Experimental implementation of JEP-389
See https://openjdk.java.net/jeps/389